[package]
name = "psxrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rmp-serde = "1.2.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_bytes = "0.11.14"
pprof = { version = "0.13.0", features = ["protobuf", "protobuf-codec", "flamegraph"] }